Added preliminary !info functionality; fixed an issue with dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,1 @@
-campaigns/#TODO_V2#
-campaigns/cmpn_1/sythe.txt
-campaigns/cmpn_2/ezra.txt
-campaigns/cmpn_2/takoyaki.txt
-campaigns/cmpn_2/malefor.txt
-campaigns/cmpn_1/sylkas.txt
-campaigns/cmpn_1/mori_sol.txt
+campaigns
